[package]
name = "blockchaindemo"
version = "0.1.0"
authors = ["Fredrik Simonsson <simson@thesimson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blockchaindemolib"
path = "src/lib.rs"

[dependencies]
hmac-sha256 = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.4"
clap = "2.33.3"